src/test/deca/context/valid/custom/if/if_int_true.deca
// Description:
//   Declaration of an integer and test its value with an if condition.
// Results:
//    Line 11: display "Ok" on the standard output because the condition is true.
//
// History:
//    created on 12/01/2022

{
   int i = 1;
   if (i == 1) {
        println("Ok");
   } else {
        println("Error because i == 1 is true");
   }
}
