src/test/deca/context/invalid/custom/if_unknown_bool_decl.deca
// Description:
//   Test if on a variable of boolean int that has not been declared.
// Results:
//    Line 11: Error, the variable is not initialised.
//
// History:
//    created on 12/01/2022

{
   boolean i;
   if (i == true) {
        println("Error, the variable is not initialised");
   } else {
        println("Error, the variable is not initialised");
   }
}
